/** @page apreq_changes CHANGES
@brief List of major changes.


@section v2_05 Changes with libapreq2-2.05


- C API [Max Kellermann]
  mod_apreq must check the return value of apreq_brigade_concat
  to avoid a RAM-consuming infinite loop.  A bad APREQ_TempDir 
  setting can cause this situation.

- C API [joes]
  Provide workaround for chunked trailers bug in ap_http_filter.

- C, Perl API [joes]
  Several upload-related bugfixes:
   1) apreq_upload and apreq_uploads did not search the full body table,
   2) $upload->slurp and $io->read did not autovivify the resultant string.

- C API [joes]
  Add "flags" attribute to apreq_value_t, planning for charset support.
  This is an ABI change, starting with libapreq2.so.2.0.24.

- C API [joes]
  Add apreq_env_bucket_alloc() to get an allocator directly from the
  environment instead of creating them from a pool.  This is an
  ABI change, starting with libapreq2.so.2.0.23.

- Build system [joes]
  Add --with-apache2-httpd option so users can override apxs's
  notion of where the httpd executable is.  XSBuilder's header
  parser runs from buildconf now instead of configure, so we
  will include those tables in the release tarball.  buildconf
  gets an additional --with-perl option for running the xsbuilder.pl
  parsing script.  The XS generation code in xsbuilder.pl has moved 
  to glue/perl/Makefile.PL.

- Perl API [joes]
  Allow ctors for Apache::Cookie, Apache::Cookie::Jar
  and Apache:::Request to accept Apache::Request objects
  (instead of requiring an Apache::RequestRec object).
  This thread details the bug
        http://thread.gmane.org/gmane.comp.apache.mod-perl/15727

- C API [Bojan Smojver]
  Bake cookies with err_headers_out so they are
  sent on non-2xx server responses (ie. a 304 redirect).
  Also ensure that headers are copied with apr_table_add
  instead of apr_table_addn.  Since apreq_cookie_bake()
  allocates from the stack, the Set-Cookie headers would 
  occasionally get mangled without this patch.
